k8s-config/service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-nodejs-service
  namespace: basic-nodejs
spec:
  type: NodePort
  selector:
    app: basic-nodejs-deployment
  ports:
  - protocol: TCP
    port: 3200
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-nodejs-deployment
  labels:
    app: basic-nodejs-deployment
  namespace: basic-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: basic-nodejs-deployment
  template:
    metadata:
      namespace: basic-nodejs
      labels:
        app: basic-nodejs-deployment
    spec:
      containers:
      - name: basic-nodejs-pod
        image: alexasparks1991/basic-nodejs:latest
        ports:
        - containerPort: 80
