k8s-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-nodejs-service
  namespace: basic-nodejs
spec:
  selector:
    app: basic-nodejs-deployment
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3000
